<resources>
    <string name="app_name">IntentsProj</string>
    <string name="num_1">Number 1</string>
    <string name="num_2">Number 2</string>
    <string name="ok">OK</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multi">*</string>
    <string name="divide">/</string>
    <string name="hello_world">Hello world</string>
    <string name="custom_toast_text">JavaTpoint Custom Toast</string>
    <string name="to">To</string>
</resources>